            Add `seaLevelPressure` to Bangle.setOptions (fix #2213)
            Bangle.js: speed up HRM average adjustment (specifically when sample rate is 25Hz, eg. for Bangle.js 2)
            Bangle.js: Change default distance units to m,km (from m,miles) (fix #2209, fix #2210)
            Bangle.js: Rename default locale to 'system' (from 'en_GB')
            
     2v13 : Memory usage improvement: Function scopes no longer stored as an array if they only contain one scope
            Memory usage improvement: The root scope is never stored in the scope list (it's searched by default)
            E.dumpVariables now dumps variable flags
            Tidying up Native Function handling (now JSV_NATIVE_FUNCTION not JSV_NATIVE|JSV_FUNCTION)
            NRF.getSecurityStatus now returns 'connected_addr' for the address of the currently-connected device
            NRF.setAdvertising converts arrays of arrays to arrays of ArrayBuffers. Also don't update advertising when connected.
            Memory usage improvement: Arrow functions only store value of 'this' if 'this' is used by code inside them (fix #2139)
            Add String.prototype.concat (fix #2140)
            Much-improved whitespace lexing code using single jumptable - 3% speed increase
            Allow `process.memory(false)` to get memory info but skip GC
            Graphics: fix height calculation bug in fillRect/clearRect when given an object with w/h as an argument
            Fix potential corruption issue caused by `delete [].__proto__` (fix #2142)
            Bangle.setUI is now minified, also calls Bangle.uiRemove if it was set (to clean up custom UI additions)
            E.showScroller tweaks to allow redraw requests, get/set initial scroll amount, negative scroll (for titles)
            NRF.setScanResponse now works on SDK15
            Fix g.wrapString if string ends with a bitmap
            g.wrapString now splits long words if they are too long for a line